# ProjectManagement

./: README.md
Assembly_Programming/: README.md
Assembly_Programming/e01/: README.md  a1.c  floating_point_unit.c  sin_cos.c
Makefile_examples/example1/: Makefile
Makefile_examples/example1/src/: main.cpp  vec.cpp
Makefile_examples/generic_makefile/: Makefile
arxiv_crawler/: README.md  arxiv_raw.sqlite  c.py  e2.py  my_arxiv.py  tmp.txt
cmake/example_01/: README.md
cmake/example_01/MathFunctions/: CMakeLists.txt
cmake/example_02/: CMakeLists.txt  README.md
cmake/example_03/: CMakeLists.txt  README.md
cmake/example_04/: CMakeLists.txt  README.md
cmake/example_05/: CMakeLists.txt  README.md
cmake/example_06/: CMakeLists.txt
cmake/example_07/: CMakeLists.txt  hello-embedded-python.c
cpp_threads/: .condition_variables.c.swp  .gdb_history  README.md  a.out  condition_variables  convar.c  stack_management.c  thread00_hello_world.c  thread01_creation_and_termination.c  thread02_mutex.c  thread03_mutex.c  thread05_join_and_detach.c  thread06_condition_variable.c  thread07_condition_variable.c  thread_mutex.c
deep_learning_A_to_Z/: Building_an_ANN_optimized.py
deep_learning_A_to_Z/.ipynb_checkpoints/: Building_an_ANN-checkpoint.ipynb  Building_an_ANN_optimized-checkpoint.ipynb
gdb_examples/: README.md
multi_threads_debug/: .gdb_history  README.md  example_1.c
tools/: .README.md.swp  .gpakosz_readme.md.swp  .xshell5.bat.swp  ELF_file_profile.md  README.md  tmux_cheatsheet.md  vim_latex.md  vimrc_1  xshell5.bat
unsupervised_feature_learning_and_deep_learning_UFLDL/: my_fuldl_books.tex
unsupervised_feature_learning_and_deep_learning_UFLDL/stanford_dl_ex-master/cnn/: cnnConvolve.m  cnnCost.m
unsupervised_feature_learning_and_deep_learning_UFLDL/stanford_dl_ex-master/ex1/: ex1a_linreg.m  ex1b_logreg.m  grad_check.m  linear_regression.m  logistic_regression.m  logistic_regression_vec.m  softmax_regression_vec.m
unsupervised_feature_learning_and_deep_learning_UFLDL/stanford_dl_ex-master/multilayer_supervised/: supervised_dnn_cost.m
unsupervised_feature_learning_and_deep_learning_UFLDL/stanford_dl_ex-master/pca/: pca_gen.m
unsupervised_feature_learning_and_deep_learning_UFLDL/stanford_dl_ex-master/rica/: zca2.m
unsupervised_feature_learning_and_deep_learning_UFLDL/stanford_dl_ex-master/self_taught_learning_with_sparse_autoencoder/: feedForwardAutoencoder.m  softmaxTrain.m  stlExercise.m
unsupervised_feature_learning_and_deep_learning_UFLDL/stanford_dl_ex-master/sparseae_exercise/starter/: computeNumericalGradient.m  sampleIMAGES.m  sparseAutoencoderCost.m  train.m
